--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>Custom marker icons</title>
+<title>Using maxBounds to restrict map panning</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.js'></script>
 <link href='https://api.mapbox.com/mapbox.js/v2.2.3/mapbox.css' rel='stylesheet' />
@@ -13,57 +13,26 @@
 </head>
 <body>
 <div id='map'></div>
+
 <script>
-L.mapbox.accessToken = '<your access token here>';
-var map = L.mapbox.map('map', 'mapbox.streets')
-    .setView([40, -74.50], 8);
+L.mapbox.accessToken = 'pk.eyJ1IjoicHJhdGlreWFkYXYiLCJhIjoiMTA2YWUxNjRkNmFmZGQ4YzAxZWFiNDk0NDM1YjE1YjAifQ.4P6N5dNmA_WQXd3BsJvu5w';
+// Construct a bounding box for this map that the user cannot
+// move out of
+var southWest = L.latLng(-41.212, 1.152),
+    northEast = L.latLng(49.074, 91.125),
+    bounds = L.latLngBounds(southWest, northEast);
 
-var myLayer = L.mapbox.featureLayer().addTo(map);
-
-var geoJson = [{
-    "type": "Feature",
-    "geometry": {
-        "type": "Point",
-        "coordinates": [-75.00, 40]
-    },
-    "properties": {
-        "title": "Small astronaut",
-        "icon": {
-            "iconUrl": "/mapbox.js/assets/images/astronaut1.png",
-            "iconSize": [50, 50], // size of the icon
-            "iconAnchor": [25, 25], // point of the icon which will correspond to marker's location
-            "popupAnchor": [0, -25], // point from which the popup should open relative to the iconAnchor
-            "className": "dot"
-        }
-    }
-}, {
-    "type": "Feature",
-    "geometry": {
-        "type": "Point",
-        "coordinates": [-74.00, 40]
-    },
-    "properties": {
-        "title": "Big astronaut",
-        "icon": {
-            "iconUrl": "/mapbox.js/assets/images/astronaut2.png",
-            "iconSize": [100, 100],
-            "iconAnchor": [50, 50],
-            "popupAnchor": [0, -55],
-            "className": "dot"
-        }
-    }
-}];
-
-// Set a custom icon on each marker based on feature properties.
-myLayer.on('layeradd', function(e) {
-    var marker = e.layer,
-        feature = marker.feature;
-
-    marker.setIcon(L.icon(feature.properties.icon));
+var map = L.mapbox.map('map', 'pratikyadav.99672395', {
+    // set that bounding box as maxBounds to restrict moving the map
+    // see full maxBounds documentation:
+    // http://leafletjs.com/reference.html#map-maxbounds
+    maxBounds: bounds,
+    maxZoom: 8,
+    minZoom: 5
 });
 
-// Add features to the map.
-myLayer.setGeoJSON(geoJson);
+// zoom the map to that bounding box
+map.fitBounds(bounds);
 </script>
 </body>
 </html>
