--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   body { margin:0; padding:0; }
   #map { position:absolute; top:0; bottom:0; width:100%; }
 </style>
+<link rel="shortcut icon" href="icon.ico">
 </head>
 <body>
 <div id='map'></div>
